# rustbroker

./: README.md
docs/: TECHNICAL_DESIGN.md  backtest_engine_core.md  xtdata_market_data_plan.md
examples/: double_sma_strategy.py  import_csv_to_db.py  run_multi_asset_rebalance_strategy.py  xquant_double_sma_strategy.py
examples/data/: sample.csv
python/rustbroker/: __init__.py  api.py  data.py  indicators.py  strategy.py
rust/engine_rust/: Cargo.toml  pyproject.toml
rust/engine_rust/src/: database.rs  datafeed.rs  engine.rs  execution_engine.rs  indicator_engine.rs  lib.rs  metrics_recorder.rs  types.rs
