[build-system]
requires = ["maturin>=1.5,<2"]
build-backend = "maturin"

[project]
name = "engine_rust"
version = "0.1.0"
description = "Rust core backtest engine with PyO3 bindings"
authors = [{ name = "pyrust-bt" }]
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python",
    "Programming Language :: Rust",
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
] 